--- a/FreeCodeCamp/Certification/ResponsiveWebDesign/TechnicalDocumentation/index.html
+++ b/FreeCodeCamp/Certification/ResponsiveWebDesign/TechnicalDocumentation/index.html
@@ -35,7 +35,7 @@
           <li>item 5</l1>
         </ul>
       </section>      
-      <section id="HelloWorld" class="main-section">
+      <section id="Hello_World" class="main-section">
         <header>Hello World</header>
         <p>p1</p>
         <p>p2</p>
@@ -148,7 +148,7 @@
       <header>JS Documentation</header>      
       <ul>
         <li><a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a></li>
-        <li><a class="nav-link" href="#HelloWorld">Hello World</a></li>
+        <li><a class="nav-link" href="#Hello_World">Hello World</a></li>
         <li><a class="nav-link" href="#Variables">Variables</a></li>
         <li><a class="nav-link" href="#Declaring_variables">Declaring variables</a></li>
         <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
