--- a/FreeCodeCamp/Certification/DataVisualizationProjects/d3/index.html
+++ b/FreeCodeCamp/Certification/DataVisualizationProjects/d3/index.html
@@ -6,6 +6,9 @@
   </head>
 <body>
   <script>
+    
+    import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
+    
     const dataset = [
                   [ 34,     78 ],
                   [ 109,   280 ],
