--- a/FreeCodeCamp/Certification/DataVisualizationProjects/d3/index.html
+++ b/FreeCodeCamp/Certification/DataVisualizationProjects/d3/index.html
@@ -5,10 +5,10 @@
     <title>D3 Visualization</title>  
   </head>
 <body>
-  <script>
+  <script type="module">
     
     import * as d3 from "https://cdn.jsdelivr.net/npm/d3@7/+esm";
-    
+
     const dataset = [
                   [ 34,     78 ],
                   [ 109,   280 ],
